--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "expo": "~48.0.18",
+    "expo-asset": "~8.9.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.8",
+    "react-native-web": "~0.18.11",
+    "expo-font": "~11.1.1"
+  },
+  "rnpm": {
+    "assets": ["./assets/fonts/"]
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
